--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Flare</title>
+    <title>TechSoc MSIT</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -25,9 +25,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/LOGO_techsoc.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/LOGO_techsoc.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/LOGO_techsoc.png">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -52,7 +52,7 @@
 
         <div class="s-header__logo">
             <a href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
+                <a href="/">TechSoc MSIT</a>
             </a>
         </div>
 
@@ -125,7 +125,7 @@
             </a>
         </div>
 
-    </section> <!-- end s-hero -->
+    </section> 
 
 
     <!-- about
@@ -536,7 +536,7 @@
 
     <!-- contact
     ================================================== -->
-    <section class="s-contact">
+    <!-- <section class="s-contact">
 
         <div class="row narrower s-contact__top h-text-center">
             <div class="column">
@@ -547,7 +547,7 @@
                 Shoot us a message at
                 </h1>
             </div>
-        </div> <!-- s-footer__top -->
+        </div> 
 
         <div class="row h-text-center">
             <div class="column">
@@ -557,7 +557,7 @@
             </div>
         </div>
 
-    </section>  <!-- end s-contact -->
+    </section>  -->
 
 
     <!-- footer
@@ -595,8 +595,8 @@
                 <a href="mailto:#0" class="btn h-full-width">Let's Talk</a>
 
                 <div class="ss-copyright">
-                    <span>Copyright Flare 2020</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                    <span>Copyright TechSoc 2020</span> 
+                    <span>Design by <a href="/">Team TechSoc</a></span>
                 </div>
             </div>
 
