--- a/index.html
+++ b/index.html
@@ -2,41 +2,30 @@
 <html class="no-js" lang="en">
 <head>
 
-    <!--- basic page needs
-    ================================================== -->
     <meta charset="utf-8">
     <title>TechSoc MSIT</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- mobile specific metas
-    ================================================== -->
+    <meta name="description" content="The official Technical Society of MSIT">
+    <meta name="author" content="MSIT">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS
-    ================================================== -->
+    <!-- CSS  -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/vendor.css">
 
-    <!-- script
-    ================================================== -->
+    <!-- script -->
     <script src="js/modernizr.js"></script>
     <script defer src="js/fontawesome/all.min.js"></script>
 
-    <!-- favicons
-    ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="./images/LOGO_techsoc.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/LOGO_techsoc.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/LOGO_techsoc.png">
-    <link rel="manifest" href="site.webmanifest">
 
 </head>
 
 <body id="top">
 
 
-    <!-- preloader
-    ================================================== -->
+    <!-- preloader -->
     <div id="preloader">
         <div id="loader" class="dots-fade">
             <div></div>
@@ -45,9 +34,7 @@
         </div>
     </div>
 
-
-    <!-- header
-    ================================================== -->
+    <!-- header -->
     <header class="s-header">
 
         <div class="s-header__logo">
@@ -62,8 +49,9 @@
                 <ul class="s-header__nav">
                     <li><a class="smoothscroll" href="#hero" title="Intro">Home</a></li>
                     <li><a class="smoothscroll" href="#about" title="About">About</a></li>
-                    <li><a class="smoothscroll" href="#services" title="Services">Services</a></li>
-                    <li><a class="smoothscroll" href="#portfolio" title="Works">Works</a></li>
+                    <li><a class="smoothscroll" href="#services" title="Teams">Teams</a></li>
+                    <li><a class="smoothscroll" href="#events" title="Works">Events and Workshops</a></li>
+                    <li><a class="smoothscroll" href="#" title="Gallery">Gallery</a></li>
                 </ul>
             </nav> <!-- end s-header__nav-wrap -->
 
@@ -79,8 +67,7 @@
     </header> <!-- end s-header -->
 
 
-    <!-- hero
-    ================================================== -->
+    <!-- hero -->
     <section id="hero" class="s-hero target-section">
 
         <div class="s-hero__bg">
@@ -128,8 +115,7 @@
     </section> 
 
 
-    <!-- about
-    ================================================== -->
+    <!-- about -->
     <section id="about" class="s-about">
 
         <div class="horizontal-line"></div>
@@ -203,8 +189,7 @@
     </section> <!-- end s-about -->
 
 
-    <!-- services
-    ================================================== -->
+    <!-- services -->
     <section id="services" class="s-services">
 
         <div class="row">
@@ -294,7 +279,7 @@
 
     </section> <!-- end s-services -->
 
-    <section id="portfolio" class="s-portfolio">
+    <section id="events" class="s-event">
 
         <div class="row s-porfolio__top">
             <div class="column large-6 w-900-stack">
@@ -308,9 +293,9 @@
                     free to check them out.
                 </h1>
             </div>
-        </div> <!-- end s-portfolio__top-->
+        </div> <!-- end s-event__top-->
 
-        <div class="row s-portfolio__list block-large-1-2 block-tab-full collapse">
+        <div class="row s-event__list block-large-1-2 block-tab-full collapse">
 
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
@@ -425,11 +410,10 @@
 
         </div> <!-- folio-list -->
 
-    </section> <!-- end s-portfolio -->
+    </section> <!-- end s-event -->
 
 
-    <!-- clients
-    ================================================== -->
+    <!-- clients -->
     <div id="clients" class="section s-clients">
 
         <div class="row narrower s-clients__top h-text-center">
@@ -560,8 +544,7 @@
     </section>  -->
 
 
-    <!-- footer
-    ================================================== -->
+    <!-- footer -->
     <footer class="s-footer">
         <div class="row row-y-top">
 
