--- a/index.html
+++ b/index.html
@@ -208,87 +208,66 @@
     <section id="services" class="s-services">
 
         <div class="row">
-            <div class="column large-12">
+            <div class="column large-6">
                 <div class="section-title" data-num="02" data-aos="fade-up">
                     <h3 class="h6">Our Expertise</h3>
                 </div>
             </div>
             <div class="column large-6 w-900-stack">
                 <h1 class="display-1" data-aos="fade-up">
-                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                    Quis dolores totam voluptatibus. 
+                    Here are some of our projects we done lately. Feel
+                    free to check them out.
                 </h1>
             </div>
-            <div class="column large-6 w-900-stack">
+            <!-- <div class="column large-6 w-900-stack">
                 <p class="lead" data-aos="fade-up">
                 Velit deleniti harum sit beatae sint repellendus expedita. Omnis possimus 
                 sed rerum tenetur ea ab aut minima magnam. Deserunt sit cupiditate 
                 similique eveniet earum. Consectetur dolores maxime quisquam voluptate magni.
                 Ut ex unde rem quod ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
                 </p>
-            </div>
+            </div> -->
         </div>
 
         <div class="row block-large-1-2 block-tab-full s-services__services item-list">
-            <div class="column item item-service" data-aos="fade-up">
-                <span class="service-icon service-icon--product-design"></span>
-                <h3 class="item-title">Product Design</h3>
-                <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+            <div class="column item card-box item-service" data-aos="fade-up">
+                <h3 class="card-header item-title">Product Design</h3>
+                <p class="card-dec">
+                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
+                    Quis dolores totam voluptatibus molestiae non. 
                 </p>
+                <span class="service-icon card-icon service-icon--product-design"></span>
             </div>
-            <div class="column item item-service" data-aos="fade-up">
-                <span class="service-icon service-icon--branding"></span>
-                <h3 class="item-title">Branding</h3>
-                <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+            <div class="column item card-box item-service" data-aos="fade-up">
+                <h3 class="card-header item-title">Product Design</h3>
+                <p class="card-dec">
+                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
+                    Quis dolores totam voluptatibus molestiae non. 
                 </p>
+                <span class="service-icon card-icon service-icon--product-design"></span>
+            </div><div class="column item card-box item-service" data-aos="fade-up">
+                <h3 class="card-header item-title">Product Design</h3>
+                <p class="card-dec">
+                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
+                    Quis dolores totam voluptatibus molestiae non. 
+                </p>
+                <span class="service-icon card-icon service-icon--product-design"></span>
             </div>
-            <div class="column item item-service" data-aos="fade-up">
-                <span class="service-icon service-icon--frontend"></span>
-                <h3 class="item-title">Frontend Development</h3>
-                <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+            <div class="column item card-box item-service" data-aos="fade-up">
+                <h3 class="card-header item-title">Product Design</h3>
+                <p class="card-dec">
+                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
+                    Quis dolores totam voluptatibus molestiae non. 
                 </p>
+                <span class="service-icon card-icon service-icon--product-design"></span>
             </div>
-            <div class="column item item-service" data-aos="fade-up">
-                <span class="service-icon service-icon--research"></span>
-                <h3 class="item-title">UX Research</h3>
-                <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+            <div class="column item card-box item-service" data-aos="fade-up">
+                <h3 class="card-header item-title">Product Design</h3>
+                <p class="card-dec">
+                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
+                    Quis dolores totam voluptatibus molestiae non. 
                 </p>
-            </div>
-            <div class="column item item-service" data-aos="fade-up">
-                <span class="service-icon service-icon--illustration"></span>
-                <h3 class="item-title">Illustration</h3>
-                <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
-                </p>
-            </div>
-            <div class="column item item-service" data-aos="fade-up">
-                <span class="service-icon service-icon--ecommerce"></span>
-                <h3 class="item-title">E-Commerce</h3>
-                <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
-                </p>
+                <span class="service-icon card-icon service-icon--product-design"></span>
             </div>
         </div>
 
