--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <title>TechSoc MSIT</title>
-    <meta name="description" content="The official Technical Society of MSIT">
+    <meta name="description" content="The Official Technical Society of MSIT">
     <meta name="author" content="MSIT">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
