--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="row s-porfolio__top">
             <div class="column large-6 w-900-stack">
                 <div class="section-title" data-num="03" data-aos="fade-up">
-                    <h3 class="h6">Recent Works</h3>
+                    <h3 class="h6">Events & Workshops</h3>
                 </div>
             </div>
             <div class="column large-6 w-900-stack">
@@ -300,16 +300,16 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-red-wheel.jpg" title="The Red Wheel" data-size="1050x700">
-                            <img src="images/portfolio/red-wheel.jpg" 
-                                 srcset="images/portfolio/red-wheel.jpg 1x, images/portfolio/red-wheel@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/events/UIUX.jpg" title="UIUX" data-size="1050x700">
+                            <img src="images/events/UIUX.jpg" 
+                                 srcset="images/events/UIUX.jpg 1x, images/events/UIUX.jpg 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Branding</div>
-                        <h4 class="folio-item__title">The Red Wheel</h4>
+                        <div class="folio-item__cat">Designing</div>
+                        <h4 class="folio-item__title">UI/ UX Workshop</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -318,16 +318,16 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-music-life.jpg" title="Music Life" data-size="1050x700">
-                            <img src="images/portfolio/music-life.jpg" 
-                                 srcset="images/portfolio/music-life.jpg 1x, images/portfolio/music-life@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/events/Resume.jpg" title="Resume" data-size="1050x700">
+                            <img src="images/events/Resume.jpg" 
+                                 srcset="images/events/Resume.jpg 1x, images/events/Resume.jpg 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Frontend Design</div>
-                        <h4 class="folio-item__title">Music Life</h4>
+                        <div class="folio-item__cat">Self Development</div>
+                        <h4 class="folio-item__title">Resume Building</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -336,16 +336,16 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-oi-logo.jpg" Title="OI Logo" data-size="1050x700">
-                            <img src="images/portfolio/oi-logo.jpg.jpg" 
-                                 srcset="images/portfolio/oi-logo.jpg 1x, images/portfolio/oi-logo@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/events/PB_2.jpg" Title="Placement Bytes" data-size="1050x700">
+                            <img src="images/events/PB_2.jpg" 
+                                 srcset="images/events/PB_2.jpg 1x, images/events/PB_2.jpg 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Branding</div>
-                        <h4 class="folio-item__title">OI Logo</h4>
+                        <div class="folio-item__cat">Recurring Event</div>
+                        <h4 class="folio-item__title">Placement Bytes #2</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -354,16 +354,16 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-corrugated-sheets.jpg" title="Corrugated Sheets" data-size="1050x700">
-                            <img src="images/portfolio/corrugated-sheets.jpg" 
-                                 srcset="images/portfolio/corrugated-sheets.jpg 1x, images/portfolio/corrugated-sheets@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/events/PB_1.jpg" title="Placement Bytes" data-size="1050x700">
+                            <img src="images/events/PB_1.jpg" 
+                                 srcset="images/events/PB_1.jpg 1x, images/events/PB_1.jpg 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Frontend Design</div>
-                        <h4 class="folio-item__title">Corrugated Sheets</h4>
+                        <div class="folio-item__cat">Recurring Event</div>
+                        <h4 class="folio-item__title">Placement Bytes #1</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -372,17 +372,17 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-woodcraft.jpg" title="Sand Dunes" data-size="1050x700">
-                            <img src="images/portfolio/woodcraft.jpg" 
-                                 srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/events/atmanirbhar.jpg" title="Atmanirbhar" data-size="1050x700">
+                            <img src="images/events/atmanirbhar.jpg" 
+                                 srcset="images/events/atmanirbhar.jpg 1x, images/events/atmanirbhar.jpg 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Frontend Design</div>
-                        <h4 class="folio-item__title">Wooocraft</h4>
+                        <div class="folio-item__cat">Webinar</div>
+                        <h4 class="folio-item__title">Atmanirbhar</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">
-                        Project Link
+                    <a href="#" title="Project Link" class="folio-item__project-link">
+                        Link
                     </a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
@@ -392,16 +392,16 @@
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-lamp.jpg" title="The Lamp" data-size="1050x700">
-                            <img src="images/portfolio/lamp.jpg" 
-                                 srcset="images/portfolio/lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/events/snip_battle.jpg" title="Snip Battle" data-size="1050x700">
+                            <img src="images/events/snip_battle.jpg" 
+                                 srcset="images/events/snip_battle.jpg 1x, images/events/snip_battle.jpg 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Frontend Design</div>
-                        <h4 class="folio-item__title">The Lamp</h4>
+                        <div class="folio-item__cat">WebDev Competition</div>
+                        <h4 class="folio-item__title">Snip Battle</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
