--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
         <div class="row">
             <div class="column large-6">
                 <div class="section-title" data-num="02" data-aos="fade-up">
-                    <h3 class="h6">Our Expertise</h3>
+                    <h3 class="h6">Our Teams</h3>
                 </div>
             </div>
             <div class="column large-6 w-900-stack">
                 <h1 class="display-1" data-aos="fade-up">
-                    Here are some of our projects we done lately. Feel
+                    Here are our Tech Teams. Feel
                     free to check them out.
                 </h1>
             </div>
@@ -215,44 +215,60 @@
         </div>
 
         <div class="row block-large-1-2 block-tab-full s-services__services item-list">
-            <div class="column item card-box item-service" data-aos="fade-up">
+            <!-- <div class="column item card-box item-service" data-aos="fade-up">
+                <span class="card-number">01</span>
                 <h3 class="card-header item-title">Product Design</h3>
                 <p class="card-dec">
                     Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
-                <span class="service-icon card-icon service-icon--product-design"></span>
+                <div class="card-icon">
+                    <span class="service-icon service-icon--product-design"></span>
+                </div>
+            </div> -->
+            <div class="column item card-box item-service" data-aos="fade-up">
+                <span class="card-number">01</span>
+                <h3 class="card-header item-title">Web Development</h3>
+                <p class="card-dec">
+                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
+                    Quis dolores totam voluptatibus molestiae non. 
+                </p>
+                <div class="card-icon">
+                    <span class="service-icon service-icon--product-design"></span>
+                </div>
             </div>
             <div class="column item card-box item-service" data-aos="fade-up">
-                <h3 class="card-header item-title">Product Design</h3>
+                <span class="card-number">02</span>
+                <h3 class="card-header item-title">Mobile Development</h3>
                 <p class="card-dec">
                     Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
-                <span class="service-icon card-icon service-icon--product-design"></span>
-            </div><div class="column item card-box item-service" data-aos="fade-up">
-                <h3 class="card-header item-title">Product Design</h3>
-                <p class="card-dec">
-                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                    Quis dolores totam voluptatibus molestiae non. 
-                </p>
-                <span class="service-icon card-icon service-icon--product-design"></span>
+                <div class="card-icon">
+                    <span class="service-icon service-icon--product-design"></span>
+                </div>
             </div>
             <div class="column item card-box item-service" data-aos="fade-up">
-                <h3 class="card-header item-title">Product Design</h3>
+                <span class="card-number">03</span>
+                <h3 class="card-header item-title">AI and ML</h3>
                 <p class="card-dec">
                     Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
-                <span class="service-icon card-icon service-icon--product-design"></span>
+                <div class="card-icon">
+                    <span class="service-icon service-icon--product-design"></span>
+                </div>
             </div>
             <div class="column item card-box item-service" data-aos="fade-up">
-                <h3 class="card-header item-title">Product Design</h3>
+                <span class="card-number">04</span>
+                <h3 class="card-header item-title">Competitive Programming</h3>
                 <p class="card-dec">
                     Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
-                <span class="service-icon card-icon service-icon--product-design"></span>
+                <div class="card-icon">
+                    <span class="service-icon service-icon--product-design"></span>
+                </div>
             </div>
         </div>
 
