--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
                 <div class="card-icon">
-                    <span class="service-icon service-icon--product-design"></span>
+                    <span class="service-icon service-icon--web-dev"></span>
                 </div>
             </div>
             <div class="column item card-box item-service" data-aos="fade-up">
@@ -245,7 +245,7 @@
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
                 <div class="card-icon">
-                    <span class="service-icon service-icon--product-design"></span>
+                    <span class="service-icon service-icon--mobile"></span>
                 </div>
             </div>
             <div class="column item card-box item-service" data-aos="fade-up">
@@ -256,7 +256,7 @@
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
                 <div class="card-icon">
-                    <span class="service-icon service-icon--product-design"></span>
+                    <span class="service-icon service-icon--ml_ai"></span>
                 </div>
             </div>
             <div class="column item card-box item-service" data-aos="fade-up">
@@ -267,7 +267,7 @@
                     Quis dolores totam voluptatibus molestiae non. 
                 </p>
                 <div class="card-icon">
-                    <span class="service-icon service-icon--product-design"></span>
+                    <span class="service-icon service-icon--cp"></span>
                 </div>
             </div>
         </div>
