--- a/index.html
+++ b/index.html
@@ -279,13 +279,12 @@
         <div class="row s-porfolio__top">
             <div class="column large-6 w-900-stack">
                 <div class="section-title" data-num="03" data-aos="fade-up">
-                    <h3 class="h6">Events & Workshops</h3>
+                    <h3 class="h6">Our work</h3>
                 </div>
             </div>
             <div class="column large-6 w-900-stack">
                 <h1 class="display-1" data-aos="fade-up">
-                    Here are some of our projects we done lately. Feel
-                    free to check them out.
+                    Some of our events and workshops conducted in the past. 
                 </h1>
             </div>
         </div> <!-- end s-event__top-->
@@ -414,8 +413,7 @@
         <div class="row narrower s-clients__top h-text-center">
             <div class="column">
                 <h1 class="display-1" data-aos="fade-up">
-                We've had the priveledge with working with
-                some of the largest and most iconic brands
+                Proficiency in a wide range of technical skills.
                 </h1>
             </div>
         </div> <!-- s-clients__top -->
@@ -423,15 +421,16 @@
         <div class="row clients-outer">
             <div class="column">
                 <div class="clients" data-aos="fade-up">
-                    
-                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/dropbox.svg" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/atom.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/html-5.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/react.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/php.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/python.svg" /></a>
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/github.svg" /></a>
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/redhat.svg" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/medium.svg" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/messenger.svg" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/steam.svg" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/spotify.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/mysql.svg" /></a>
+                    <a href="#0" title="" class="clients__slide" style="transform: translateY(-13%);"><img src="images/icons/clients/mongodb-icon.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/atom.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/css-3.svg" /></a>
                      
                 </div> <!-- end clients -->
             </div> <!-- end column -->
