--- a/index.html
+++ b/index.html
@@ -149,39 +149,27 @@
 
         <div class="row block-large-1-2 block-tab-full s-about__process item-list">
             <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Define</h3>
+                <h3 class="item-title">Learn</h3>
                 <p>
                 Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                 Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+                cum numquam repudiandae. Beatae eum quae. 
                 </p>
             </div>
             <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Design</h3>
+                <h3 class="item-title">Visualize</h3>
                 <p>
                 Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                 Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+                cum numquam repudiandae. Beatae eum quae. 
                 </p>
             </div>
             <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Build</h3>
+                <h3 class="item-title">Exhibit</h3>
                 <p>
                 Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                 Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
-                </p>
-            </div>
-            <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Launch</h3>
-                <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+                cum numquam repudiandae. Beatae eum quae. 
                 </p>
             </div>
         </div>
