--- a/offline.html
+++ b/offline.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="header">
+        <p class="header-text">
+          Oops!! Looks like you are offline.. 
+          Anyways, enjoy 2048 😁
+        </p>
+      </div>
+
       <div class="heading">
         <h1 class="title">2048</h1>
         <div class="score-container">0</div>
