--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="column large-6 w-900-stack s-about__intro-text">
                 <h1 class="display-1" data-aos="fade-up">
-                    Flare is a branding agency based in somewhere. We design thoughtful digital experiences and beautiful brand aesthetics.
+                    The Official Technical Society of MSIT.
                 </h1>
 
                 <p class="lead" data-aos="fade-up">
