--- a/index.html
+++ b/index.html
@@ -466,28 +466,28 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                            <div class="image" style="background-image: url('/images/events/Screenshot\ \(60\).png')">
+                            <div class="image" style="background-image: url('images/events/Screenshot\ \(60\).png')">
                                 <div class="overlay">
                                     <em class="mdi mdi-magnify-plus"></em>
                                 </div>
                             </div>
                     </div>
                     <div class="swiper-slide">
-                            <div class="image" style="background-image: url('/images/events/Screenshot\ \(83\).png')">
+                            <div class="image" style="background-image: url('./images/events/Screenshot\ \(83\).png')">
                                 <div class="overlay">
                                     <em class="mdi mdi-magnify-plus"></em>
                                 </div>
                             </div>
                     </div>
                     <div class="swiper-slide">
-                            <div class="image" style="background-image: url('/images/events/Screenshot\ \(84\).png')">
+                            <div class="image" style="background-image: url('images/events/Screenshot\ \(84\).png')">
                                 <div class="overlay">
                                     <em class="mdi mdi-magnify-plus"></em>
                                 </div>
                             </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="image" style="background-image: url('/images/events/uiux(2).jpg')">
+                        <div class="image" style="background-image: url('images/events/uiux(2).jpg')">
                             <div class="overlay">
                                 <em class="mdi mdi-magnify-plus"></em>
                             </div>
