push kro khush rho

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </div>
         </div> <!-- s-clients__top -->
 
-        <div class="row clients-outer">
+        <div class="row clients-outer" data-aos="fade-up">
             <div class="column">
                 <div class="clients" data-aos="fade-up">
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/html-5.svg" /></a>
@@ -462,7 +462,7 @@
             </div>
         </div>
         
-        <div class="carousel-gallery">
+        <div class="carousel-gallery" data-aos="fade-up">
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
