--- a/offline.html
+++ b/offline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>You are Offline!!</title>
-    <link rel="stylesheet" href="/css/offline.css" />
+    <link rel="stylesheet" href="/website/css/offline.css" />
   </head>
   <body>
     <div class="container">
@@ -68,7 +68,7 @@
       </p>
       <hr />
     </div>
-    <script src="/js/offline.js"></script>
-    <script src="/js/hammer.min.js"></script>
+    <script src="/website/js/offline.js"></script>
+    <script src="/website/js/hammer.min.js"></script>
   </body>
 </html>
