push karo khush raho :)

--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
                 <span class="card-number">01</span>
                 <h3 class="card-header item-title">Web Development</h3>
                 <p class="card-dec">
-                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                    Quis dolores totam voluptatibus molestiae non. 
+                    This team will focus on bring the best of Web Development to college in form of projects, webinars and competitions.
                 </p>
                 <div class="card-icon">
                     <span class="service-icon service-icon--web-dev"></span>
@@ -221,8 +220,7 @@
                 <span class="card-number">02</span>
                 <h3 class="card-header item-title">Mobile Development</h3>
                 <p class="card-dec">
-                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                    Quis dolores totam voluptatibus molestiae non. 
+                    The Mobile Development team will work to bring the best of mobile application to hands of everyone in MSIT.
                 </p>
                 <div class="card-icon">
                     <span class="service-icon service-icon--mobile"></span>
@@ -232,8 +230,7 @@
                 <span class="card-number">03</span>
                 <h3 class="card-header item-title">AI and ML</h3>
                 <p class="card-dec">
-                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                    Quis dolores totam voluptatibus molestiae non. 
+                    AI & ML team will focus on spreding awareness regarding the growing feild of AI and ML to the students of MSIT via projects, webinars ansd contests.
                 </p>
                 <div class="card-icon">
                     <span class="service-icon service-icon--ml_ai"></span>
@@ -243,8 +240,7 @@
                 <span class="card-number">04</span>
                 <h3 class="card-header item-title">Competitive Programming</h3>
                 <p class="card-dec">
-                    Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                    Quis dolores totam voluptatibus molestiae non. 
+                    This teams will focus on making student proficient in Data Structures and Algorithms via the means of Competitive Programming. 
                 </p>
                 <div class="card-icon">
                     <span class="service-icon service-icon--cp"></span>
@@ -285,7 +281,7 @@
                     </div>
                     <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>Workshop on UI/UX designing to give you detailed insights about designing and its future prospects.</p>
                     </div>
                 </div>
             </div> <!-- end column -->
@@ -303,7 +299,7 @@
                     </div>
                     <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>Unfolding the misconceptions behind resume building</p>
                     </div>
                 </div>
             </div> <!-- end column -->
@@ -321,7 +317,8 @@
                     </div>
                     <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>Techsoc MSIT is back with the second episode where we have Shubham Chauhan as our next speaker.
+                            An Associate Software Engineer at IHSMarkit with working knowledge of JavaScript and Angular programing languages.</p>
                     </div>
                 </div>
             </div> <!-- end column -->
@@ -339,7 +336,7 @@
                     </div>
                     <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>For Placement Bytes #1, we have Gaurang Sahu, the flute guy of MSIT. His notes would've swayed you at least once in your time in college.</p>
                     </div>
                 </div>
             </div> <!-- end column -->
@@ -359,7 +356,7 @@
                         Link
                     </a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>TechSoc MSIT in collaboration with Edudictive (an E-learning platform) organized an insightful event consisting of a series of  webinars titled - Upskilling Forum'20. It was a three day event from 7th Aug to 9th Aug. The aim of the event was to focus on different skills required to cultivate the dream of Aatmanirbhar Bharat.</p>
                     </div>
                 </div>
             </div> <!-- end column -->
@@ -377,7 +374,8 @@
                     </div>
                     <a href="#" title="Project Link" class="folio-item__project-link">Link</a>
                     <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        <p>Snip Battle.
+                            Send in your entries as code snippets for mini games, animations or anything you can come up with using only HTML, CSS and JavaScript.</p>
                     </div>
                 </div>
             </div> <!-- end column -->
